force-app/main/default/objects/HDT_AutomationToggle__mdt/HDT_AutomationToggle__mdt.object-meta.xml
<CustomObject>
    <label>Automation Toggle</label>
    <pluralLabel>Automation Toggle</pluralLabel>
</CustomObject>