force-app/main/default/objects/HDT_AutomationToggle__mdt/fields/SkipDueDateTime__c.field-meta.xml
<CustomField>
    <fullName>SkipDueDateTime__c</fullName>
    <description>End date/time of deactivation​</description>
    <inlineHelpText>End date/time of deactivation</inlineHelpText>
    <label>Skip Due Date/Time</label>
    <type>DateTime</type>
</CustomField>