force-app/main/default/objects/HDT_AutomationToggle__mdt/fields/SkipEvents__c.field-meta.xml
<CustomField>
    <fullName>SkipEvents__c</fullName>
    <description>List of events to be skipped (e.g.: after update;before insert)</description>
    <inlineHelpText>List of events to be skipped
(e.g.: after update;before insert)
* = All events</inlineHelpText>
    <label>Skip Events</label>
    <length>255</length>
    <type>Text</type>
</CustomField>