force-app/main/default/objects/HDT_AutomationToggle__mdt/fields/SkipUsernames__c.field-meta.xml
<CustomField>
    <fullName>SkipUsernames__c</fullName>
    <description>List of usernames interested by deactivation</description>
    <inlineHelpText>List of usernames interested by deactivation
* = All users</inlineHelpText>
    <label>Skip Usernames</label>
    <length>255</length>
    <type>Text</type>
</CustomField>